dist_man1_MANS=

if BUILD_QUERCUSD
  dist_man1_MANS+=quercusd.1
endif

if ENABLE_QT
  dist_man1_MANS+=quercus-qt.1
endif

if BUILD_QUERCUS_CLI
  dist_man1_MANS+=quercus-cli.1
endif

if BUILD_QUERCUS_TX
  dist_man1_MANS+=quercus-tx.1
endif

if BUILD_QUERCUS_UTIL
  dist_man1_MANS+=quercus-util.1
endif

if ENABLE_WALLET
if BUILD_QUERCUS_WALLET
  dist_man1_MANS+=quercus-wallet.1
endif
endif
